# endian

./: .gitignore  CMakeLists.txt  README.md  endian-config.cmake.in
include/endian/: be_uint16_t.h  be_uint24_t.h  be_uint32_t.h  be_uint64_t.h  be_uint8_t.h  endian.h  endian_base.h  endian_base_t.h  le_uint16_t.h  le_uint24_t.h  le_uint32_t.h  le_uint64_t.h  le_uint8_t.h
src/: be_uint16_t.cpp  be_uint24_t.cpp  endian_base.cpp  le_uint16_t.cpp  le_uint24_t.cpp
test/: test_be_uint16_t.cpp  test_be_uint24_t.cpp  test_be_uint32_t.cpp  test_be_uint64_t.cpp  test_common.h  test_le_uint16_t.cpp  test_le_uint24_t.cpp  test_le_uint32_t.cpp  test_le_uint64_t.cpp
